# dir2text

./: pyproject.toml
src/dir2text/: __main__.py  _util.py  main.py  markdown.py  text.py  xml.py
