[tool.poetry]
name = "dir2text"
version = "0.9.0"
description = ""
authors = ["Nima Shoghi <nimashoghi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
tiktoken = "*"
gitignore-parser = "*"
nbconvert = "*"
nbformat = "*"
tqdm = "*"

[tool.poetry.group.dev.dependencies]
ipykernel = "*"
rich = "*"
ruff = "*"
pyright = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dir2text = "dir2text.text:main"
dir2md = "dir2text.markdown:main"
dir2xml = "dir2text.xml:main"

[tool.pyright]
typeCheckingMode = "standard"
deprecateTypingAliases = true
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
reportPrivateImportUsage = false

[tool.ruff.lint]
select = ["FA102", "FA100"]
ignore = ["F722", "F821", "E731", "E741"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
